--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -41,11 +41,12 @@
     "www.pro-football-reference.come and documentation: https://www.sports-reference.com/termsofuse.html\n",
     "\"\"\"\n",
     "\n",
+    "import time\n",
     "import pyodbc\n",
     "import os\n",
+    "# import pandas as pd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from gspread_pandas import Spread\n",
     "from sqlalchemy import create_engine\n",
     "from sqlalchemy import inspect\n",
     "from sqlalchemy.engine import URL\n",
@@ -102,141 +103,136 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c1bad5-5b8c-41f0-b1ce-3412fdef5ee9",
+   "id": "33cdc38e-0d9b-4ab4-9c30-cd41ad122535",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "pd.set_option(\"display.max_colwidth\", 15)\n",
+    "pd.set_option(\"display.max_rows\", None)\n",
     "# schedule_stats_api_sql(api_key, year, engine)\n",
-    "# snaps(y1, y2, engine)\n",
+    "# snaps(2016, 2020, engine)\n",
     "# injuries(y1, y2, engine)\n",
+    "# practice_participation(season_start, season_end, engine)\n",
     "# player_table(engine)\n",
     "# game_table(engine)\n",
     "# season_table(engine)\n",
     "# week_table(engine)\n",
     "# team_table(engine)\n",
     "# venue_table(engine)\n",
+    "# calendar_table(\"8/1/2016\", \"2/1/2021\", engine)\n",
+    "weekly_stats_offense(conn, engine)\n",
     "\n",
-    "# spread = Spread(\"PracticeParticipation\")\n",
-    "\n",
-    "# weeks = list(range(1,22))\n",
-    "# seasons = list(range(2016, 2022))\n",
-    "# teams_id = [\"Arizona Cardinals\", \"Atlanta Falcons\", \"Baltimore Ravens\", \"Buffalo Bills\", \n",
-    "#             \"Carolina Panthers\", \"Chicago Bears\", \"Cincinnati Bengals\", \"Cleveland Browns\", \n",
-    "#             \"Dallas Cowboys\", \"Denver Broncos\", \"Detroit Lions\", \"Green Bay Packers\", \n",
-    "#             \"Houston Texans\", \"Indianapolis Colts\", \"Jacksonville Jaguars\", \"Kansas City Chiefs\", \n",
-    "#             \"Los Angeles Rams\", \"San Diego Chargers\", \"Miami Dolphins\", \"Minnesota Vikings\", \"New England Patriots\", \n",
-    "#             \"New Orleans Saints\", \"New York Giants\", \"New York Jets\", \"Oakland Raiders\", \"Las Vegas Raiders\",\n",
-    "#             \"Philadelphia Eagles\", \"Pittsburgh Steelers\", \"Los Angeles Chargers\", \"San Francisco 49ers\", \n",
-    "#             \"Seattle Seahawks\", \"Tampa Bay Buccaneers\", \"Tennessee Titans\", \"Washington Redskins\", \"Washington Football Team\"]\n",
-    "\n",
-    "# practice_par_df = pd.DataFrame()\n",
-    "\n",
-    "# for season in seasons:\n",
-    "    \n",
-    "#     for week in weeks:\n",
-    "        \n",
-    "#         try:\n",
-    "#             sh = f\"{str(season)}w{str(week)}\"\n",
-    "#             sheet = spread.sheet_to_df(header_rows=None, sheet=sh)\n",
-    "#             sheet = sheet.reset_index()\n",
-    "\n",
-    "#             idx = [sheet[\"index\"][sheet[\"index\"] == d].index[0] for t in teams_id for d in sheet[\"index\"] if t in d]\n",
-    "#             idx.append(len(sheet[\"index\"]))\n",
-    "#             idx.sort()\n",
-    "\n",
-    "#             final_df = pd.DataFrame()\n",
-    "\n",
-    "#             for i in range(len(idx[:-1])):\n",
-    "                \n",
-    "#                 sheet.loc[idx[i]+2:idx[i+1]-1, \"team\"] = sheet[\"index\"].loc[idx[i]]\n",
-    "                \n",
-    "#                 team = sheet.loc[idx[i]+1:idx[i+1]-1]\n",
-    "                \n",
-    "#                 columns = team.iloc[0].values.tolist()\n",
-    "#                 columns = columns[:-1]\n",
-    "#                 columns[1] = \"injury\"\n",
-    "#                 columns.append(\"team\")\n",
-    "                \n",
-    "#                 team.columns = columns\n",
-    "#                 team = team[team[\"Player\"] != \"Player\"]\n",
-    "                \n",
-    "#                 final_df = pd.concat([final_df, team])\n",
-    "\n",
-    "#             final_df[\"season\"] = season\n",
-    "#             final_df[\"week\"] = week\n",
-    "            \n",
-    "#             cols = final_df.columns.tolist()\n",
-    "#             cols.remove(\"Player\")\n",
-    "#             cols.remove(\"injury\")\n",
-    "#             cols.remove(\"team\")\n",
-    "#             cols.remove(\"week\")\n",
-    "#             cols.remove(\"season\")\n",
-    "            \n",
-    "#             final_df = pd.melt(final_df, \n",
-    "#                                id_vars=[\"Player\", \"injury\", \"team\", \"season\", \"week\"], \n",
-    "#                                value_vars=cols, \n",
-    "#                                var_name=\"date\", \n",
-    "#                                value_name=\"status\", \n",
-    "#                                ignore_index=True)\n",
-    "            \n",
-    "#             final_df = final_df.dropna(subset=[\"status\"])\n",
-    "#             final_df[[\"player\", \"pos\"]] = final_df[\"Player\"].str.split(\", \", 1, expand=True)\n",
-    "#             final_df[[\"last.date\", \"status\", \"home.away\", \"opp\"]] = final_df[\"status\"].str.split(\" \", expand=True)\n",
-    "#             final_df = final_df.drop([\"Player\"], axis=1)\n",
-    "#             final_df[\"status\"] = final_df[\"status\"].fillna(value=final_df[\"last.date\"])\n",
-    "#             final_df.sort_values([\"team\", \"player\"], inplace=True)\n",
-    "#             final_df[\"home.away\"] = final_df.groupby(\"team\")[\"home.away\"].transform(lambda x: x.bfill().ffill())\n",
-    "#             final_df[\"opp\"] = final_df.groupby(\"team\")[\"opp\"].transform(lambda x: x.bfill().ffill())\n",
-    "#             final_df[[\"day.name.abr\", \"date\"]] = final_df[\"date\"].str.split(\" \", expand=True)\n",
-    "#             final_df[\"date\"] = final_df[\"date\"].replace(\"Status\", np.nan)\n",
-    "#             final_df = final_df[[\"player\", \"pos\", \"team\", \n",
-    "#                                  \"home.away\", \"opp\", \"season\", \n",
-    "#                                  \"week\", \"date\", \"status\", \n",
-    "#                                  \"injury\", \"day.name.abr\"]]\n",
-    "\n",
-    "#             spread.df_to_sheet(final_df, index=False, sheet=sh, replace=True)\n",
-    "#             practice_par_df = pd.concat([practice_par_df, sheet])\n",
-    "                \n",
-    "#         except Exception as e:\n",
-    "#             print(e)\n",
-    "#             print(sh)\n",
-    "#             break\n",
-    "            \n",
-    "# practice_par_df.to_sql(\"practiceParticipation\", engine, if_exists=\"append\", index=False, schema=\"dbo\", chunksize=500)"
+    "# calendar_ID = pd.read_sql_table(\"IDCalendarTable\", con=conn)\n",
+    "# game_ID = pd.read_sql_table(\"IDGameTable\", con=conn)\n",
+    "# team_ID = pd.read_sql_table(\"IDTeamTable\", con=conn)\n",
+    "# venue_ID = pd.read_sql_table(\"IDVenueTable\", con=conn)\n",
+    "# player_practice = pd.read_sql_table(\"playerPractice\", con=conn)\n",
+    "# player_snaps = pd.read_sql_table(\"playerSnaps\",  con=conn)\n",
+    "# player_stats = pd.read_sql_table(\"playerStats\", con=conn)\n",
+    "# schedule = pd.read_sql_table(\"schedule\", con=conn)\n",
+    "# team_stats = pd.read_sql_table(\"teamStats\", con=conn)\n",
+    "# weekly_stats = pd.read_sql_table(\"weeklyStats\", con=conn)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85e1a44-0131-40c2-8ab6-5b7a635ebba3",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
+   "id": "6a499cd5-9b52-4e3a-b092-1a4b10c1fac6",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# start = \"1/1/2015\"\n",
-    "# end = \"12/31/2025\"\n",
-    "# calendar_df = pd.DataFrame(pd.date_range(start, end), columns=[\"date\"])\n",
-    "# calendar_df[\"day.number\"] = calendar_df[\"date\"].dt.day\n",
-    "# calendar_df[\"day.abr\"] = calendar_df[\"date\"].dt.strftime(\"%a\")\n",
-    "# calendar_df[\"day.name\"] = calendar_df[\"date\"].dt.strftime(\"%A\")\n",
-    "# calendar_df[\"month.number\"] = calendar_df[\"date\"].dt.month\n",
-    "# calendar_df[\"month.abr\"] = calendar_df[\"date\"].dt.strftime(\"%b\")\n",
-    "# calendar_df[\"month.name\"] = calendar_df[\"date\"].dt.strftime(\"%B\")\n",
-    "# calendar_df[\"year\"] = calendar_df[\"date\"].dt.year\n",
-    "# calendar_df[\"week.number\"] = calendar_df[\"date\"].dt.isocalendar().week\n",
-    "# calendar_df[\"day.year.number\"] = calendar_df[\"date\"].dt.dayofyear\n",
-    "# calendar_df\n",
-    "# calendar_df.to_sql(\"calendarIDTable\", engine, if_exists=\"replace\", index=False, schema=\"dbo\", chunksize=500)"
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
+    "%matplotlib inline\n",
+    "weekly_stats = pd.read_sql_table(\"weeklyStats\", con=conn)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0b2d646-19d8-4988-944f-db4c137abb78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = (weekly_stats[\"player.position\"] == \"RB\") & (weekly_stats[\"total.snaps\"] >= 5) & (weekly_stats[\"total_fan_pts.half.kick_yrds\"] >= 0)\n",
+    "sns.displot(weekly_stats[mask], x=\"total_fan_pts.half.kick_yrds\", binwidth=1, kde=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23dd4b49-4c1d-4eb7-a2b5-4ac9a4279532",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c007c92-66d8-4b9c-8287-1d13ba5013e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a693940-b27d-4bc2-9039-4d779b10941a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0b8246b-7bfa-46ec-856c-b0b8a57a88f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr = weekly_stats.corr()\n",
+    "def background_pandas(x):\n",
+    "    try:\n",
+    "        if x >= 0.5:\n",
+    "            bg_color = \"green\"\n",
+    "        elif x <= -0.5:\n",
+    "            bg_color = \"green\"\n",
+    "        else:\n",
+    "            bg_color = \"\"\n",
+    "        return f\"background-color : {bg_color}\"\n",
+    "\n",
+    "    except:\n",
+    "        return \"background-color: ''\"\n",
+    "    \n",
+    "corr.style.format(precision=3).applymap(background_pandas).to_excel(\"correlations.xlsx\", engine=\"openpyxl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99830f46-b5ed-4b41-8598-8f8322da0378",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3da4ed97-5a4d-4466-8863-3cf4878e3dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "617c8c90-8f17-4f50-add5-853eefb77fff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -252,45 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d10deb92-b759-4f4f-8389-4a1cd54d98df",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11215a34-4023-4efa-9b53-c8d7aa5cf197",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78cd0103-0398-44b6-a83c-2456f187ed89",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1be679e8-f4d2-464a-b431-d21b27b202dc",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc55df30-edd6-4852-807d-11309a373927",
+   "id": "e24a68d1-b956-4a97-9cde-1eff17c493fd",
    "metadata": {},
    "outputs": [],
    "source": []
