--- a/scripts/main.ipynb
+++ b/scripts/main.ipynb
@@ -123,18 +123,19 @@
     "# team_table(engine)\n",
     "# venue_table(engine)\n",
     "# calendar_table(\"8/1/2016\", \"2/1/2021\", engine)\n",
-    "weekly_stats_offense(conn, engine)\n",
+    "# weekly_stats_offense(conn, engine)\n",
     "\n",
     "# calendar_ID = pd.read_sql_table(\"IDCalendarTable\", con=conn)\n",
     "# game_ID = pd.read_sql_table(\"IDGameTable\", con=conn)\n",
     "# team_ID = pd.read_sql_table(\"IDTeamTable\", con=conn)\n",
     "# venue_ID = pd.read_sql_table(\"IDVenueTable\", con=conn)\n",
+    "# week_ID = pd.read_sql_table(\"IDWeekTable\", con=conn)\n",
     "# player_practice = pd.read_sql_table(\"playerPractice\", con=conn)\n",
     "# player_snaps = pd.read_sql_table(\"playerSnaps\",  con=conn)\n",
     "# player_stats = pd.read_sql_table(\"playerStats\", con=conn)\n",
     "# schedule = pd.read_sql_table(\"schedule\", con=conn)\n",
     "# team_stats = pd.read_sql_table(\"teamStats\", con=conn)\n",
-    "# weekly_stats = pd.read_sql_table(\"weeklyStats\", con=conn)"
+    "weekly_stats = pd.read_sql_table(\"weeklyStats\", con=conn)"
    ]
   },
   {
@@ -148,24 +149,176 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "%matplotlib inline\n",
-    "weekly_stats = pd.read_sql_table(\"weeklyStats\", con=conn)"
+    "weekly_stats.sort_values([\"season.year\", \"week.sequence\", \"team.id\", \"player.id\"], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0b2d646-19d8-4988-944f-db4c137abb78",
+   "id": "49938fe7-8154-4e0f-b14c-109625800ee2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = (weekly_stats[\"player.position\"] == \"RB\") & (weekly_stats[\"total.snaps\"] >= 5) & (weekly_stats[\"total_fan_pts.half.kick_yrds\"] >= 0)\n",
-    "sns.displot(weekly_stats[mask], x=\"total_fan_pts.half.kick_yrds\", binwidth=1, kde=True)"
+    "variables = [\"off.snaps\", \"total_fan_pts.half.kick_yrds\"] \n",
+    "\n",
+    "position = [\"QB\", \"RB\", \"WR\", \"TE\"]\n",
+    "\n",
+    "status_cats = [\"date1.status\", \"date2.status\", \"date3.status\", \"game.status\"]\n",
+    "\n",
+    "injury_cats = [\"head\", \"face\", \"neck\", \"shoulder\",   \"upper_arm\", \"elbow\", \"forearm\", \"wrist\", \"hand_finger\", \"thumb\", \"back\", \"chest\", \"abdomen\", \"hip\",\n",
+    "               \"groin\", \"quadricep\", \"hamstring\", \"thigh\", \"knee\", \"lower_leg\", \"achilles\",   \"ankle\", \"foot\", \"toe\", \"illness\"]\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "hypothesis_results = {2: \"Reject the null: There is significance between injury status/injury and fantasy production.\".upper(),\n",
+    "                      1: \"Reject the null: There is significance between injury status/injury and offense snap counts.\".upper()}\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23dd4b49-4c1d-4eb7-a2b5-4ac9a4279532",
+   "id": "614d8bbb-95e2-4131-97f7-be1ce314d1b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hypothesis_1 = weekly_stats[(weekly_stats[\"played\"] >= 1) & (weekly_stats[\"off.snaps\"] >= 15)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2501a60e-1ef0-4ea7-aa14-45b24b3c3724",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for pos in position:\n",
+    "    for status_day in status_cats:\n",
+    "        for injury in injury_cats:\n",
+    "                \n",
+    "            hypothesis_1_full = hypothesis_1[\n",
+    "                (\n",
+    "                    (hypothesis_1[status_day].isnull()) \n",
+    "                    | (hypothesis_1[status_day] == \"Full\")\n",
+    "                ) \n",
+    "                & (hypothesis_1[\"player.position\"] == pos)\n",
+    "            ]\n",
+    "\n",
+    "            hypothesis_1_status = hypothesis_1[\n",
+    "                ~(\n",
+    "                    (hypothesis_1[status_day].isnull()) \n",
+    "                    | (hypothesis_1[status_day] == \"Full\")\n",
+    "                ) \n",
+    "                & (hypothesis_1[\"player.position\"] == pos)\n",
+    "                & (hypothesis_1[injury] > 0)\n",
+    "            ]\n",
+    "\n",
+    "            try:\n",
+    "                p_mannwhiteyu_snaps = stats.mannwhitneyu(hypothesis_1_full[variables[0]], hypothesis_1_status[variables[0]])[1]\n",
+    "                if p_mannwhiteyu_snaps > alpha:\n",
+    "                    pass\n",
+    "                elif p_mannwhiteyu_snaps <= alpha:\n",
+    "                    print(pos, \n",
+    "                          injury.upper(), \n",
+    "                          status_day.upper(), \n",
+    "                          \"Snaps\", \n",
+    "                          hypothesis_results[1], \n",
+    "                          \"p_value = \"+str(p_mannwhiteyu_snaps), \n",
+    "                          \"No designation Snaps:\",\n",
+    "                          len(hypothesis_1_full[variables[0]]),\n",
+    "                          \"Designation Snaps:\",\n",
+    "                          len(hypothesis_1_status[variables[0]]),\n",
+    "                          \"\\n\",\n",
+    "                          sep=\"\\n\")\n",
+    "\n",
+    "                p_mannwhiteyu_fp = stats.mannwhitneyu(hypothesis_1_full[variables[1]], hypothesis_1_status[variables[1]])[1]\n",
+    "                if p_mannwhiteyu_fp > alpha:\n",
+    "                    pass\n",
+    "                elif p_mannwhiteyu_fp <= alpha:\n",
+    "                    print(pos, \n",
+    "                          injury.upper(), \n",
+    "                          status_day.upper(), \n",
+    "                          \"FP\", \n",
+    "                          hypothesis_results[2], \n",
+    "                          \"p_value = \"+str(p_mannwhiteyu_fp), \n",
+    "                          \"No designation FP:\",\n",
+    "                          len(hypothesis_1_full[variables[1]]),\n",
+    "                          \"Designation FP:\",\n",
+    "                          len(hypothesis_1_status[variables[1]]),\n",
+    "                          \"\\n\",\n",
+    "                          sep=\"\\n\")\n",
+    "            except:\n",
+    "                continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaeb3bf7-71ac-45f2-a181-c3ac61723154",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for status_day in status_cats:\n",
+    "\n",
+    "        hypothesis_1_full = hypothesis_1[\n",
+    "            (\n",
+    "                (hypothesis_1[status_day].isnull()) \n",
+    "                | (hypothesis_1[status_day] == \"Full\")\n",
+    "            ) \n",
+    "        ]\n",
+    "\n",
+    "        hypothesis_1_status = hypothesis_1[\n",
+    "            # (\n",
+    "            #     (hypothesis_1[status_day] == \"Questionable\") \n",
+    "            #     | (hypothesis_1[status_day] == \"Doubtful\") \n",
+    "            #     | (hypothesis_1[status_day] == \"Limited\") \n",
+    "            #     | (hypothesis_1[status_day] == \"DNP\")\n",
+    "            # )\n",
+    "            ~(\n",
+    "                (hypothesis_1[status_day].isnull()) \n",
+    "                | (hypothesis_1[status_day] == \"Full\")\n",
+    "            ) \n",
+    "        ]\n",
+    "\n",
+    "        try:\n",
+    "            p_mannwhiteyu_snaps = stats.mannwhitneyu(hypothesis_1_full[variables[0]], hypothesis_1_status[variables[0]])[1]\n",
+    "            if p_mannwhiteyu_snaps > alpha:\n",
+    "                pass\n",
+    "            elif p_mannwhiteyu_snaps <= alpha:\n",
+    "                print(status_day.upper(), \n",
+    "                      \"Snaps\", \n",
+    "                      hypothesis_results[1], \n",
+    "                      \"p_value = \"+str(p_mannwhiteyu_snaps), \n",
+    "                      \"No designation Snaps:\",\n",
+    "                      len(hypothesis_1_full[variables[0]]),\n",
+    "                      \"Designation Snaps:\",\n",
+    "                      len(hypothesis_1_status[variables[0]]),\n",
+    "                      \"\\n\",\n",
+    "                      sep=\"\\n\")\n",
+    "\n",
+    "            p_mannwhiteyu_fp = stats.mannwhitneyu(hypothesis_1_full[variables[1]], hypothesis_1_status[variables[1]])[1]\n",
+    "            if p_mannwhiteyu_fp > alpha:\n",
+    "                pass\n",
+    "            elif p_mannwhiteyu_fp <= alpha:\n",
+    "                print(status_day.upper(), \n",
+    "                      \"FP\", \n",
+    "                      hypothesis_results[2], \n",
+    "                      \"p_value = \"+str(p_mannwhiteyu_fp), \n",
+    "                      \"No designation FP:\",\n",
+    "                      len(hypothesis_1_full[variables[1]]),\n",
+    "                      \"Designation FP:\",\n",
+    "                      len(hypothesis_1_status[variables[1]]),\n",
+    "                      \"\\n\",\n",
+    "                      sep=\"\\n\")\n",
+    "        except:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "938da506-664b-42c3-9f30-cfd0ea188d45",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -173,71 +326,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c007c92-66d8-4b9c-8287-1d13ba5013e0",
+   "id": "678fbb7f-81ff-4cde-8b63-0a00537d1c1d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "329b7c83-df60-46f5-af11-1628e7422fc2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3182640-17ba-42fd-812e-02fb38642b46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76fa9132-c307-4225-8818-51568ada0bf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0996050d-ade1-43ac-b1c1-caab2713603e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e532829c-47d4-49ae-bdd6-c06b10a0a7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3339efeb-737d-4330-8b8b-38982a55a3fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2e4bbdc-3f41-456b-b164-3e12251cddc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "paired t-test\n",
+    "    assume normal distribution\n",
+    "    assume no outliers\n",
+    "\n",
+    "Wilcoxon Signed-Rank test:\n",
+    "    not normal distribution\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2a693940-b27d-4bc2-9039-4d779b10941a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0b8246b-7bfa-46ec-856c-b0b8a57a88f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr = weekly_stats.corr()\n",
-    "def background_pandas(x):\n",
-    "    try:\n",
-    "        if x >= 0.5:\n",
-    "            bg_color = \"green\"\n",
-    "        elif x <= -0.5:\n",
-    "            bg_color = \"green\"\n",
-    "        else:\n",
-    "            bg_color = \"\"\n",
-    "        return f\"background-color : {bg_color}\"\n",
-    "\n",
-    "    except:\n",
-    "        return \"background-color: ''\"\n",
-    "    \n",
-    "corr.style.format(precision=3).applymap(background_pandas).to_excel(\"correlations.xlsx\", engine=\"openpyxl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99830f46-b5ed-4b41-8598-8f8322da0378",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3da4ed97-5a4d-4466-8863-3cf4878e3dc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "617c8c90-8f17-4f50-add5-853eefb77fff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59fe2ebc-1440-4130-a366-239c20241314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,10 +410,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e24a68d1-b956-4a97-9cde-1eff17c493fd",
+   "id": "c0b8246b-7bfa-46ec-856c-b0b8a57a88f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import seaborn as sns\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from scipy import stats\n",
+    "# %matplotlib inline\n",
+    "# weekly_stats = pd.read_sql_table(\"weeklyStats\", con=conn)\n",
+    "# mask = (weekly_stats[\"player.position\"] == \"RB\") & (weekly_stats[\"total.snaps\"] >= 5) & (weekly_stats[\"total_fan_pts.half.kick_yrds\"] >= 0)\n",
+    "# sns.displot(weekly_stats[mask], x=\"total_fan_pts.half.kick_yrds\", binwidth=1, kde=True)\n",
+    "# corr = weekly_stats.corr()\n",
+    "# def background_pandas(x):\n",
+    "#     try:\n",
+    "#         if x >= 0.5:\n",
+    "#             bg_color = \"green\"\n",
+    "#         elif x <= -0.5:\n",
+    "#             bg_color = \"green\"\n",
+    "#         else:\n",
+    "#             bg_color = \"\"\n",
+    "#         return f\"background-color : {bg_color}\"\n",
+    "\n",
+    "#     except:\n",
+    "#         return \"background-color: ''\"\n",
+    "    \n",
+    "# corr.style.format(precision=3).applymap(background_pandas).to_excel(\"correlations.xlsx\", engine=\"openpyxl\")"
+   ]
   }
  ],
  "metadata": {
